# shem

./: .gitignore  README.md  TODO.md  default_config.py  derivation.nix  example.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py
examples/: default_config.toml  default_config.yaml
examples/000_varying_specular_vs_diffuse/: spec_0.toml  spec_100.toml  spec_20.toml  spec_40.toml  spec_60.toml  spec_80.toml
shem/: __init__.py  __main__.py  configuration.py  database.py  default_config.py  definitions.py  detection.py  display.py  geometry.py  mesh.py  mesh_manipulation.py  optimisation.py  probability.py  ray.py  ray_tracing.py  scattering.py  scattering_functions.py  simulation.py  source.py  source_functions.py  surface.py
tests/: test_config.py  test_geometry.py  test_source.py  unit_tests.py
