[tool.poetry]
name = "shem"
version = "0.1.0"
description = "A GPU-accelerated SHeM simulations library."
authors = ["William Thomas Richards <wtr20@cam.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
# python = "^3.9"
python = ">=3.8,<3.11"
numpy = "^1.22.2"
scipy = "^1.8.0"
seaborn = "^0.11.2"
trimesh = "^3.10.2"
pyglet = "^1.5.22"
Rtree = "^0.9.7"
tqdm = "^4.63.0"
cupy-rocm-4-3 = "^10.2.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
